--- a/design/openpa_flat/stylesheets/app_2.css
+++ b/design/openpa_flat/stylesheets/app_2.css
@@ -933,13 +933,22 @@ body { font: 300 14px/21px 'Roboto', 'sans-serif'; background: #232830; letter-s
   .m_sm_left_10 { margin-left: 10px; }
   .mw_sm_0 { min-width: 0; }
   .popup { width: 750px; } }
-@media only screen and (min-width: 1100px) { .sub_menu_wrap.items-2 { width: 380px; }
+@media only screen and (min-width: 1200px) { .sub_menu_wrap.items-2 { width: 380px; }
   .sub_menu_wrap.items-3 { width: 560px; }
   .sub_menu_wrap.items-4 { width: 740px; }
   .sub_menu_wrap.items-5 { width: 920px; }
   .sub_menu_wrap.items-6 { width: 900px; }
   .sub_menu_wrap.items-6 .sub_menu-item { width: 140px; }
   .sub_menu_wrap .sub_menu-item { float: left; } }
+@media only screen and (min-width: 990px) { .sub_menu_wrap.items-2 { width: 370px; }
+  .sub_menu_wrap.items-3 { width: 550px; }
+  .sub_menu_wrap.items-4 { width: 730px; }
+  .sub_menu_wrap.items-5 { width: 910px; }
+  .sub_menu_wrap.items-6 { width: 550px; }
+  .sub_menu_wrap.items-6 .sub_menu-item { width: 110px; }
+  .sub_menu_wrap .sub_menu-item { float: left; } }
+@media only screen and (min-width: 968px) { .sub_menu_wrap.items-2 ul.sub_menu, .sub_menu_wrap.items-3 ul.sub_menu, .sub_menu_wrap.items-4 ul.sub_menu, .sub_menu_wrap.items-5 ul.sub_menu, .sub_menu_wrap.items-6 ul.sub_menu { display: none; }
+  .sub_menu_wrap.items-2 .sub_menu-item, .sub_menu_wrap.items-3 .sub_menu-item, .sub_menu_wrap.items-4 .sub_menu-item, .sub_menu_wrap.items-5 .sub_menu-item, .sub_menu_wrap.items-6 .sub_menu-item { float: none; } }
 @media only screen and (max-width: 768px) { .h_bot_part { padding-top: 15px; padding-bottom: 15px; }
   .menu_wrap { background: transparent; }
   .sub_menu_wrap { position: relative; -webkit-transform: none !important; -moz-transform: none !important; -o-transform: none !important; -ms-transform: none !important; transform: none !important; opacity: 1; visibility: visible; padding: 0; margin: 5px 0 0; -webkit-transition: none; -moz-transition: none; -o-transition: none; transition: none; }
